added checkboxes to HTML and if statement to query the checkbox states

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -16,6 +16,17 @@
         <div class="card-header">
           <h2>Generate a Password</h2>
         </div>
+        <div class="card-mid">
+          <H3>Select character types to exclude</H3>
+            <input type="checkbox" id="uppercase" name="uppercase">
+            <label for="uppercase">UPPERCASE</label>
+            <input type="checkbox" id="lowercase" name="lowercase">
+            <label for="lowercase">lowercase</label>
+            <input type="checkbox" id="specialchar" name="specialcharacters">
+            <label for="specialchar">$pec!@l Ch@r@cter$</label>
+            <input type="checkbox" id="numeric" name="numeric">
+            <label for="numeric">Num63r5</label>
+        </div>
         <div class="card-body">
           <textarea
             readonly
